--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-flask~=2.2.2
-flask-request-validator~=4.2.0
-gunicorn~=20.1.0
+flask
+flask-request-validator
+gunicorn
 torch
 torchvision
-opencv-python~=4.6.0.66
-matplotlib~=3.6.2
+matplotlib
